[project]
name = "rcaeval_causalrca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "YifanYang6", email = "YifanYang6@link.cuhk.edu.cn" }
]
requires-python = ">=3.13"
dependencies = [
    "rcabench-platform==0.3.34",
    "scikit-network>=0.33.3",
    "torch>=2.7.1",
    "rcabench==1.1.39",
]

[build-system]
requires = ["uv_build>=0.7.12,<0.8.0"]
build-backend = "uv_build"

[tool.pyright]
exclude = [ #
    ".git",
    "**/__pycache__",
    ".venv",
    ".vscode",
    ".idea",
    "data/",
    "output/",
    "temp/",
]
